--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,21 +112,13 @@ services:
     image: "${ESGF_HUB}/${ESGF_PREFIX}solr:${ESGF_VERSION}"
     restart: always
     environment:
-      ESGF_SOLR_MASTER_URL: http://esgf-solr-master:8983
+      ESGF_SOLR_MASTER_URL: http://esgf-solr-master:8983/solr
       # Use a shorter replication interval for the local slave than the default
       ESGF_SOLR_REPLICATION_INTERVAL: "00:00:60"
     volumes:
       - "solr-slave-home:/esg/solr-home"
     depends_on:
       - esgf-solr-master
-
-  # Example remote-replica configuration
-  # The replica would also need to be added to the ESGF_SOLR_SHARDS environment variable for esgf-index-node
-#  esgf-solr-nasa-jpl:
-#    image: "${ESGF_HUB}/${ESGF_PREFIX}solr:${ESGF_VERSION}"
-#    restart: always
-#    environment:
-#      ESGF_SOLR_MASTER_URL: http://esgf-node.jpl.nasa.gov:80
 
   esgf-postgres-esgcet:
     image: "${ESGF_HUB}/${ESGF_PREFIX}postgres:${ESGF_VERSION}"
@@ -178,8 +170,6 @@ services:
     environment:
       <<: *esgf_properties
       ESGF_SOLR_SHARDS: "esgf-solr-slave:8983/solr"
-      # Example of configuring additional shards
-#     ESGF_SOLR_SHARDS: "esgf-solr-slave:8983/solr,esgf-solr-nasa-jpl:8983/solr"
     volumes:
       # Make sure the trusted certificate bundle is available
       - "$ESGF_CONFIG/certificates/esg-trust-bundle.pem:/esg/certificates/esg-trust-bundle.pem:ro"
