Pass extra build args + fix dependencies

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -45,13 +45,27 @@ services:
 
   esgf-publisher:
     image: "${ESGF_HUB}/${ESGF_PREFIX}publisher:${ESGF_VERSION}"
-    build: ./publisher
+    build:
+      context: ./publisher
+      args:
+        ESGF_HUB: $ESGF_HUB
+        ESGF_PREFIX: $ESGF_PREFIX
+        ESGF_VERSION: $ESGF_VERSION
     entrypoint: ["true"]
+    depends_on:
+      - esgf-configure
 
   esgf-proxy:
     image: "${ESGF_HUB}/${ESGF_PREFIX}proxy:${ESGF_VERSION}"
-    build: ./proxy
+    build:
+      context: ./proxy
+      args:
+        ESGF_HUB: $ESGF_HUB
+        ESGF_PREFIX: $ESGF_PREFIX
+        ESGF_VERSION: $ESGF_VERSION
     entrypoint: ["true"]
+    depends_on:
+      - esgf-configure
 
   esgf-postgres-security:
     image: "${ESGF_HUB}/${ESGF_PREFIX}postgres-security:${ESGF_VERSION}"
