--- a/cluster/kubernetes/charts/templates/auth/deployment-postgres.yaml
+++ b/cluster/kubernetes/charts/templates/auth/deployment-postgres.yaml
@@ -24,6 +24,10 @@ spec:
       annotations:
         checksum/secrets: {{ include (print $.Template.BasePath "/configuration/secrets.yaml") . | sha256sum }}
     spec:
+      # Setting fsGroup for the pod allows some provisioners to chown mounted volumes to the given group
+      #   The postgres group is 26 inside our container
+      securityContext:
+        fsGroup: 26
       containers:
         - name: postgres-auth
           image: "{{ .Values.auth.postgres.image.repository }}:{{ .Values.auth.postgres.image.tag }}"
