--- a/cluster/kubernetes/charts/templates/postgres-security/pvc.yaml
+++ b/cluster/kubernetes/charts/templates/postgres-security/pvc.yaml
@@ -15,6 +15,8 @@ spec:
   resources:
     requests:
       storage: {{ .Values.postgresSecurity.persistence.size }}
+{{- if .Values.postgresSecurity.persistence.selector }}
   selector:
 {{ toYaml .Values.postgresSecurity.persistence.selector | indent 4 }}
+{{- end }}
 {{- end }}
