--- a/cluster/kubernetes/charts/templates/solr/slave-deployment.yaml
+++ b/cluster/kubernetes/charts/templates/solr/slave-deployment.yaml
@@ -22,17 +22,25 @@ spec:
         component: solr
         solr-role: slave
     spec:
+      # Setting fsGroup for the pod allows some provisioners to chown mounted volumes to the given group
+      #   The solr group is 8983 inside the container
+      securityContext:
+        fsGroup: 8983
       initContainers:
         # Wait for the solr-master to become available before starting
         - name: ensure-solr-master
-          image: "{{ .Values.solr.image.repository }}:{{ .Values.solr.image.tag }}"
-          imagePullPolicy: {{ default "" .Values.solr.image.pullPolicy | quote }}
-          args:
-            - "wait-for-solr.sh"
-            - "--max-attempts"
-            - "120"
-            - "--solr-url"
-            - "http://{{ template "fullname" . }}-solr-master:8983"
+          image: radial/busyboxplus:curl
+          command:
+            # Try every 5 seconds for no longer than 10 mins
+            - sh
+            - -c
+            - |
+              for i in $(seq 120); do
+                sleep 5
+                echo "Attempt $i of 120"
+                if curl -k -m 1 -fsSL http://{{ template "fullname" . }}-solr-master:8983/solr/admin/info/system?wt=json; then exit 0; fi
+              done
+              exit 1
       containers:
         - name: solr-slave
           image: "{{ .Values.solr.image.repository }}:{{ .Values.solr.image.tag }}"
