--- a/cluster/kubernetes/charts/templates/slcs/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/slcs/deployment.yaml
@@ -25,6 +25,7 @@ spec:
         checksum/secrets: {{ include (print $.Template.BasePath "/configuration/secrets.yaml") . | sha256sum }}
         checksum/slcs-ca: {{ include (print $.Template.BasePath "/configuration/slcs-ca.yaml") . | sha256sum }}
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
+        checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
     spec:
       initContainers:
         # Wait for databases to become available before starting
