--- a/cluster/kubernetes/charts/templates/tds/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/tds/deployment.yaml
@@ -21,6 +21,7 @@ spec:
       annotations:
         checksum/secrets: {{ include (print $.Template.BasePath "/configuration/secrets.yaml") . | sha256sum }}
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
+        checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
     spec:
       containers:
         - name: tds
