--- a/setup/Dockerfile
+++ b/setup/Dockerfile
@@ -25,9 +25,9 @@ ARG COMPOSE_VERSION=1.22.0
 RUN curl -fsSL https://github.com/docker/compose/releases/download/${COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
 
-# Install jq and PyYAML
+# Install jq
 RUN apt-get update && \
-    apt-get install -y jq python-yaml && \
+    apt-get install -y jq && \
     rm -rf /var/lib/apt/lists/*
 
 # Copy the gomplate binary from esgf-configure
