--- a/cluster/kubernetes/charts/templates/orp/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/orp/deployment.yaml
@@ -22,6 +22,7 @@ spec:
         checksum/hostcert: {{ include (print $.Template.BasePath "/configuration/hostcert.yaml") . | sha256sum }}
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
         checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
+        checksum/esg-config-overrides: {{ include (print $.Template.BasePath "/configuration/esg-config-overrides.yaml") . | sha256sum }}
     spec:
       containers:
         - name: orp
@@ -61,9 +62,14 @@ spec:
           volumeMounts:
             - mountPath: /esg/certificates/hostcert
               name: hostcert
+              readOnly: true
             - mountPath: /esg/certificates/esg-trust-bundle.pem
               name: trust-bundle
               subPath: esg-trust-bundle.pem
+              readOnly: true
+            - mountPath: /esg/config/.overrides
+              name: esg-config-overrides
+              readOnly: true
           resources:
 {{ toYaml .Values.orp.resources | indent 12 }}
       volumes:
@@ -73,3 +79,6 @@ spec:
         - name: trust-bundle
           configMap:
             name: "{{ template "fullname" . }}-trust-bundle"
+        - name: esg-config-overrides
+          configMap:
+            name: "{{ template "fullname" . }}-esg-config-overrides"
