--- a/cluster/kubernetes/charts/templates/auth/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/auth/deployment.yaml
@@ -25,6 +25,7 @@ spec:
         checksum/secrets: {{ include (print $.Template.BasePath "/configuration/secrets.yaml") . | sha256sum }}
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
         checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
+        checksum/esg-config-overrides: {{ include (print $.Template.BasePath "/configuration/esg-config-overrides.yaml") . | sha256sum }}
     spec:
       initContainers:
         # Wait for postgres to become available before starting
@@ -120,9 +121,16 @@ spec:
             - mountPath: /esg/certificates/esg-trust-bundle.pem
               name: trust-bundle
               subPath: esg-trust-bundle.pem
+              readOnly: true
+            - mountPath: /esg/config/.overrides
+              name: esg-config-overrides
+              readOnly: true
           resources:
 {{ toYaml .Values.auth.resources | indent 12 }}
       volumes:
         - name: trust-bundle
           configMap:
             name: "{{ template "fullname" . }}-trust-bundle"
+        - name: esg-config-overrides
+          configMap:
+            name: "{{ template "fullname" . }}-esg-config-overrides"
