Add TDS overrides

--- a/cluster/kubernetes/charts/templates/tds/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/tds/deployment.yaml
@@ -23,6 +23,7 @@ spec:
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
         checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
         checksum/esg-config-overrides: {{ include (print $.Template.BasePath "/configuration/esg-config-overrides.yaml") . | sha256sum }}
+        checksum/thredds-overrides: {{ include (print $.Template.BasePath "/configuration/thredds-overrides.yaml") . | sha256sum }}
     spec:
       containers:
         - name: tds
@@ -79,6 +80,9 @@ spec:
             - mountPath: /esg/config/.overrides
               name: esg-config-overrides
               readOnly: true
+            - mountPath: /esg/content/thredds/.overrides
+              name: thredds-overrides
+              readOnly: true
           resources:
 {{ toYaml .Values.tds.resources | indent 12 }}
       volumes:
@@ -94,3 +98,6 @@ spec:
         - name: esg-config-overrides
           configMap:
             name: "{{ template "fullname" . }}-esg-config-overrides"
+        - name: thredds-overrides
+          configMap:
+            name: "{{ template "fullname" . }}-thredds-overrides"
