--- a/cluster/kubernetes/charts/templates/auth/deployment.yaml
+++ b/cluster/kubernetes/charts/templates/auth/deployment.yaml
@@ -26,6 +26,7 @@ spec:
         checksum/trust-bundle: {{ include (print $.Template.BasePath "/configuration/trust-bundle.yaml") . | sha256sum }}
         checksum/environment-common: {{ include (print $.Template.BasePath "/configuration/environment-common.yaml") . | sha256sum }}
         checksum/esg-config-overrides: {{ include (print $.Template.BasePath "/configuration/esg-config-overrides.yaml") . | sha256sum }}
+        checksum/auth-overrides: {{ include (print $.Template.BasePath "/configuration/auth-overrides.yaml") . | sha256sum }}
     spec:
       initContainers:
         # Wait for postgres to become available before starting
@@ -125,6 +126,9 @@ spec:
             - mountPath: /esg/config/.overrides
               name: esg-config-overrides
               readOnly: true
+            - mountPath: /esg/auth/.overrides
+              name: auth-overrides
+              readOnly: true
           resources:
 {{ toYaml .Values.auth.resources | indent 12 }}
       volumes:
@@ -134,3 +138,6 @@ spec:
         - name: esg-config-overrides
           configMap:
             name: "{{ template "fullname" . }}-esg-config-overrides"
+        - name: auth-overrides
+          configMap:
+            name: "{{ template "fullname" . }}-auth-overrides"
