--- a/publisher/conf/esg.ini
+++ b/publisher/conf/esg.ini
@@ -5,6 +5,7 @@ gateway_options = ESG-PCMDI, ESG-NCAR, ESG-ORNL, ESG-BADC, ESG-NCI, ESG-DKRZ
 hessian_service_debug = false
 hessian_service_keyfile = /esg/config/esgcet/.globus/certificate-file
 hessian_service_certfile = /esg/config/esgcet/.globus/certificate-file
+hessian_service_certs_location = /esg/config/esgcet/.globus/certificates
 hessian_service_polling_delay = 3
 hessian_service_polling_iterations = 10
 hessian_service_port = 443
@@ -43,6 +44,7 @@ thredds_reinit_url = {{ .Env.ESGF_TDS_REINIT_URL }}
 thredds_restrict_access = esg-user
 thredds_root = /esg/content/thredds/esgcet
 thredds_root_catalog_name = Earth System Root catalog
+esg_certificates_bundle = /esg/config/esgcet/trust-bundle.pem
 
 [initialize]
 initial_models_table = /esg/config/esgcet/esgcet_models_table.txt
@@ -61,5 +63,3 @@ srmls = /usr/local/esg/bin/srm-ls
 [hsi]
 hsi = /usr/local/bin/hsi
 offline_lister_executable = %(home)s/work/Esgcet/esgcet/scripts/hsils.py
-
-[config:test]
