--- a/proxy/conf/esgf.conf
+++ b/proxy/conf/esgf.conf
@@ -43,6 +43,7 @@ server {
         proxy_pass $tds_upstream;
     }
     {{- end }}
+
 }
 
 
@@ -147,6 +148,15 @@ server {
     set $slcs_upstream {{ $slcs_upstream }};
     location /esgf-slcs {
         proxy_pass $slcs_upstream;
+    }
+    {{- end }}
+
+    {{ $visus_upstream := getenv "ESGF_VISUS_UPSTREAM" -}}
+    {{ if $visus_upstream -}}
+    set $visus_upstream {{ $visus_upstream }};
+    location /esgf-visus {
+        proxy_pass $visus_upstream;
+        rewrite ^/esgf-visus(.*)$ $1 last;
     }
     {{- end }}
 
