--- a/publisher/Dockerfile
+++ b/publisher/Dockerfile
@@ -26,6 +26,9 @@ RUN groupadd -g $PUBLISH_GID $PUBLISH_GROUP && \
 ENV ESGINI /esg/config/esgcet/esg.ini
 ENV UVCDAT_ANONYMOUS_LOG no
 
+RUN apt-get update && \
+    apt-get install -y gcc
+
 # Install packages using conda and pip
 RUN conda install -y -c conda-forge -c uvcdat \
       gcc_linux-64 \
