pull assets from GitHub for dashboard and idp

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,4 +1,4 @@
-# Docker image containing 
+# Docker image containing
 # the ESGF Dashboard and the esgf-stats web application
 
 # Note: dashboard application accesses the postgres database via credentials
@@ -10,7 +10,9 @@ FROM $ESGF_IMAGES_HUB/esgf-tomcat:$ESGF_VERSION
 
 MAINTAINER ESGF <esgf-devel@lists.llnl.gov>
 
-ARG ESGF_REPO=http://distrib-coffee.ipsl.jussieu.fr/pub/esgf
+ARG DASHBOARD_VERSION=v1.5.25
+ARG DASHBOARD_REPO=https://github.com/ESGF/esgf-dashboard/releases/download/$DASHBOARD_VERSION
+
 ENV DASHBOARD_HOME /usr/local/esgf-dashboard-ip
 
 # install library dependencies
@@ -22,14 +24,17 @@ RUN yum install -y libxml2-devel libxslt-devel \
 RUN yum clean all
 
 # install additional GeoLiteCity database
-ADD $ESGF_REPO/dist/geoip/GeoLiteCity.dat.gz /tmp/GeoLiteCity.dat.gz
+ADD $DASHBOARD_REPO/GeoLiteCity.dat.gz /tmp/GeoLiteCity.dat.gz
 RUN mkdir -p /usr/local/geoip/share/GeoIP && \
      cd /tmp && \
      gunzip -c GeoLiteCity.dat.gz > /usr/local/geoip/share/GeoIP/GeoLiteCity.dat
 
 # install esgf-stats-api war file
 #COPY dashboard/esgf-stats-api.war /usr/local/tomcat/webapps/esgf-stats-api/esgf-stats-api.war
-ADD $ESGF_REPO/dist/esgf-stats-api/esgf-stats-api.war /usr/local/tomcat/webapps/esgf-stats-api/esgf-stats-api.war
+ARG STATS_API_VERSION=v1.0.9
+ARG STATS_API_REPO=https://github.com/ESGF/esgf-stats-api/releases/download/$STATS_API_VERSION
+ADD $STATS_API_REPO/esgf-stats-api.war /usr/local/tomcat/webapps/esgf-stats-api/esgf-stats-api.war
+
 RUN cd /usr/local/tomcat/webapps/esgf-stats-api && \
     jar xvf esgf-stats-api.war && \
     rm esgf-stats-api.war && \
@@ -49,7 +54,7 @@ RUN chmod a+w /var/run
 # install the supervisor configuration for the dashboard
 # must start esgf-dashboard-ip in the foreground as non-daemon (no '&' to background the process)
 ADD scripts/ip.service $DASHBOARD_HOME/bin/ip.service
-ADD conf/supervisord.dashboard.conf /etc/supervisor/conf.d/supervisord.dashboard.conf 
+ADD conf/supervisord.dashboard.conf /etc/supervisor/conf.d/supervisord.dashboard.conf
 RUN mkdir -p $DASHBOARD_HOME/logs
 
 ENTRYPOINT /usr/local/bin/docker-entrypoint.sh
